# xffl

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  config.py  dev-requirements.txt  genindex.html  index.html  lint-requirements.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test-requirements.txt  usage.html
.doctrees/: environment.pickle  index.doctree  usage.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/xffl/: index.doctree
.doctrees/autoapi/xffl/cli/: index.doctree
.doctrees/autoapi/xffl/custom/: index.doctree
.doctrees/autoapi/xffl/distributed/: index.doctree
.doctrees/autoapi/xffl/learning/: index.doctree
.doctrees/autoapi/xffl/utils/: index.doctree
.doctrees/autoapi/xffl/workflow/: index.doctree
.github/workflows/: ci-tests.yaml  docs.yaml  lint.yaml  sphinx.yaml  system-tests.yaml
_sources/autoapi/: index.rst.txt
_sources/autoapi/xffl/: index.rst.txt
_sources/autoapi/xffl/cli/: index.rst.txt
_sources/autoapi/xffl/custom/: index.rst.txt
_sources/autoapi/xffl/distributed/: index.rst.txt
_sources/autoapi/xffl/learning/: index.rst.txt
_sources/autoapi/xffl/utils/: index.rst.txt
_sources/autoapi/xffl/workflow/: index.rst.txt
aggregator/: aggregation.py  requirements.txt
autoapi/: index.html
autoapi/xffl/: index.html
autoapi/xffl/cli/: index.html
autoapi/xffl/custom/: index.html
autoapi/xffl/distributed/: index.html
autoapi/xffl/learning/: index.html
autoapi/xffl/utils/: index.html
autoapi/xffl/workflow/: index.html
dataset/: tokenizer.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.rst
examples/: README.md  download_mixtral.sh
examples/EuroPar/: README.md  config_FL+FSDP.py  config_FL+HSDP.py  config_FLFSDP.py  config_FLHSDP.py  config_FSDP.py  config_HSDP.py  setup_llama.py  setup_mc4.py  training.py  training_FLFSDP.py  training_FLHSDP.py  training_FSDP.py  training_HSDP.py
examples/EuroPar/plots/: time_to_perp.py
examples/cross-facility/: README.md
examples/cross-facility/01_LLM/: README.md
examples/intra-silo/: README.md
examples/intra-silo/01_simple-MLP/: README.md  config.py  training.py
examples/intra-silo/01_simple_MLP/: config.py  training.py
examples/intra-silo/02_CNN/: README.md  config.py  parser.py  training.py
examples/intra-silo/03_LLM/: config.py  training.py
examples/intra-silo/04_LLM_tokenizer/: config.py  training.py
examples/intra-silo/05_Evo2/: README.md  StripedHyena2.py  config.py  inference.py  requirements.txt  split_dataset.py  training.py
examples/intra-silo/05_ILM/: config.py  config_babylm.py  config_new.py  config_qwen.py  ilm.slurm  run_trainings.sh  setup.py  training.py  upload_models.py
examples/intra-silo/06_AIFS/: README.md  config.py  config_finetuning.py  config_pretraining.py  finetuning.py  pretraining.py  requirements.txt  setup.py  training.py  utils.py
examples/llama/: README.md
examples/llama/aggregator/: initialisation.py
examples/llama/worker/: setup.sh
examples/llm/: README.md
examples/scripts/env/: deucalion.sh  discoverer.sh  hpc4ai-bw.sh  hpc4ai-cl.sh  hpc4ai-epito.sh  hpc4ai-gh.sh  karolina.sh  leonardo.sh  lumi.sh  marenostrum5.sh  meluxina.sh
examples/scripts/slurm/: deucalion.sh  discoverer.sh  hpc4ai-bw.sh  hpc4ai-gh.sh  leonardo.sh  lumi.sh  meluxina.sh  vega.sh
examples/simulation/01_simple-MLP/: config.py  parser.py  training.py
examples/simulation/02_CNN/: parser.py  training.py
examples/simulation/03_LLM/: aggregation.py  config.py  learning.slurm  learning_fl.slurm  learning_fsdp.slurm  learning_hsdp.slurm  leonardo.slurm  parser.py  requirements.txt  run_benchmark_exps.sh  run_learning_exps.sh  test.slurm  training.py
lint/: Makefile
logs/16_nodes/: fs_1  fs_4  fs_8  hsdp
logs/32_nodes/: fs_1  hsdp
logs/4_nodes/: fs_1  fs_4  fs_8  hsdp
logs/64_nodes/: hsdp
logs/8_nodes/: fs_1  fs_4  fs_8  hsdp
scripts/: coordinator_setup.sh  facility_setup.sh
test/system/cli/: Makefile  config-example.txt
test/system_test/cli/: Makefile  config-example.txt
tests/cli/: Makefile  config-example.txt
tests/system/cli/: Makefile  setup.py
tests/unit/cli/: cli_test.py
worker/: worker.def
worker/libraries/llama-recipes/: requirements.txt
worker/scripts/: analyse_logs.sh  download_dataset.py  karolina.slurm  lumi.slurm  marenostrum.slurm  meluxina.slurm  strong_scaling.sh
worker/scripts/performance_test/: leonardo.sh  lumi.sh  meluxina.sh
workflow/: README.md  streamflow.yml
workflow/cwl/: config.yml  main.cwl  round.cwl
workflow/cwl/clt/: aggregate.cwl  aggregate_1.cwl  train.cwl
workflow/cwl/scripts/: aggregation.py  exec_llama.sh
workflow/templates/cineca/: leonardo.sh
workflow/templates/karolina/: karo.sh
workflow/templates/melu/: script.sh
xffl/: config.py  constants.py
xffl/aggregator/: aggregator.def  setup.sh
xffl/cli/: cli.py  config.py  exec.py  parser.py  run.py  simulate.py  utils.py
xffl/custom/: __init__.py  config.py  config_info.py  formatter.py  parser.py  types.py  utils.py
xffl/custom/datasets/: __init__.py  clean_mc4_it.py  dataset_info.py
xffl/custom/models/: __init__.py  llama.py  mixtral.py  model_info.py
xffl/distributed/: aggregation.py  distributed.py  distributed_state.py  networking.py  utils.py
xffl/learning/: data.py  distributed.py  modelling.py  optim.py  processing.py  utils.py
xffl/scripts/: env.sh  facilitator.sh  leonardo.slurm  parser.sh  run.sh
xffl/scripts/facilities/: karolina.sh  lumi.sh  marenostrum.sh  meluxina.sh
xffl/templates/: cwl.py  sh.py  streamflow.py
xffl/utils/: constants.py  distributed_state.py  logging.conf  logging.py  networking.py  utils.py
xffl/worker/scripts/: exec_llama.sh  leonardo.slurm  test_scripts.sh  torchrun.sh
xffl/workflow/: config.py  streamflow.py  utils.py
xffl/workflow/cwl/: config.yml  round.cwl
xffl/workflow/scripts/: env.sh  facilitator.sh  leonardo.slurm  parser.sh  run.sh
xffl/workflow/templates/: aggregation_application.py  cwl.py  sh.py  streamflow.py
(+243 files in other folders)
